# ai_household

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
experiments/: 01_marginal-propensity-to-consume.py  02_dspy_mpc_experiment.py
notebooks/: dspy_test.py  make_mpc_datasets.py
results/2025-08-21_12-23-11_mpc_baseline_experiment/: metadata.yaml
results/2025-08-21_13-17-58_mpc_baseline_experiment/: metadata.yaml
src/ai_household/: __init__.py  experiment_tracker.py  gateway.py  households.py  runner.py  scenarios.py
tests/: __init__.py  test_ai_household.py
