[project]
name = "ai-household"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.4.1",
    "ruff>=0.12.7",
    "pydantic>=2.9",
    "openai>=1.40.6",
    "instructor>=1.9.1",
    "pandas>=2.3.1",
    "marimo>=0.14.17",
    "watchdog>=6.0.0",
    "plotly>=6.3.0",
    "pyyaml>=6.0.0",
    "seaborn>=0.13.2",
]
